# affordance_primitives-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: build_and_test.yaml  format.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/affordance_primitives/: affordance_utils.hpp  screw_conversions.hpp  screw_motion.hpp
rpm/: ros-humble-affordance-primitives.spec  template.spec
src/: affordance_utils.cpp  screw_motion.cpp
test/: CMakeLists.txt  test_affordance_utils.cpp  test_screw_axis.cpp
